[package]
name = "cargorecipebuild"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jarred-Wynan/jetsonrust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = "1"
structopt = { version = "0.3", default-features = false }
anyhow = "1"
rand = "0.8"
async-tungstenite = { version = "0.16", features = ["async-std-runtime", "async-native-tls"] }
gst = { package = "gstreamer", version = "0.17", features = ["v1_14"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.17" }
gst-sdp = { package = "gstreamer-sdp", version = "0.17", features = ["v1_14"] }
serde = "1"
serde_derive = "1"
serde_json = "1"

[lib]
name = "cargorecipebuild"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"
